margins broken in ios chrome due to m88 bug

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -94,7 +94,7 @@ input, textarea {
 .appContainer{
   width: 100%;
   height: 100vh;
-  scroll-behavior: smooth;
+  // scroll-behavior: auto;
   -ms-scroll-snap-type: y mandatory;
   scroll-snap-type: y mandatory;
 }
